--- a/webapp/view/Home.view.xml
+++ b/webapp/view/Home.view.xml
@@ -2,10 +2,64 @@
 	controllerName="sap.ui.demo.basicTemplate.controller.Home"
 	displayBlock="true"
 	xmlns="sap.m"
-	xmlns:mvc="sap.ui.core.mvc">
+	xmlns:mvc="sap.ui.core.mvc"
+	xmlns:core="sap.ui.core"
+	xmlns:f="sap.ui.layout.form">
 	<Page
 		id="page"
 		title="{i18n>title}">
-		<content></content>
+		<content>
+			<Image
+				src="images/MoviesHeader.png"
+				tooltip="movie illustration"
+				width="100%"
+				press="sap.m.MessageToast.show('Do you like going to the movies?')">
+			</Image>
+			<f:SimpleForm
+				id="form"
+				editable="true"
+				layout="ColumnLayout"
+				title="Find Movies"
+				columnsM="2"
+				columnsL="3"
+				columnsXL="3">
+				<f:content>
+					<Label text="City"
+						labelFor="city"/>
+					<SearchField id="city"
+						width="100%"
+						showSearchButton="false"
+						placeholder="Enter City"/>
+					<Label text="Genre"
+						labelFor="genre"/>
+					<Select id="genre"
+						width="100%">
+						<core:ListItem
+							icon="sap-icon://video"
+							key=""
+							text="All"/>
+								<core:ListItem
+									icon="sap-icon://physical-activity"
+									key="Action"
+									text="Action"/>
+								<core:ListItem
+									icon="sap-icon://electrocardiogram"
+									key="Horror"
+									text="Horror"/>
+								<core:ListItem
+									icon="sap-icon://paper-plane"
+									key="ScienceFiction"
+									text="Science Fiction"/>
+					</Select>
+					<Label />
+					<Button text="Find Movies"
+						type="Emphasized"
+						class="sapUiSmallMarginTop"
+						press=".onPress"/>
+				</f:content>
+			</f:SimpleForm>
+			
+			
+		</content>
 	</Page>
 </mvc:View>
